k8s/celery-worker.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: celery-worker
  namespace: rag-system
spec:
  replicas: 2
  selector:
    matchLabels:
      app: celery-worker
  template:
    metadata:
      labels:
        app: celery-worker
    spec:
      imagePullSecrets:
        - name: gitlab-registry
      containers:
        - name: celery-worker
          image: registry.gitlab.akhcheck.ru/kirill.rudeev/rag-sistem/celery-worker:latest
          imagePullPolicy: Always
          command: ["celery"]
          args:
            - "-A"
            - "app.tasks"
            - "worker"
            - "--loglevel=info"
            - "-E"
            - "-Q"
            - "celery,indexing,upload"
